@@ -3,12 +3,13 @@ package com.example.carSaleShop.service;
 import com.example.carSaleShop.document.Sales;
 import com.example.carSaleShop.dto.PageResult;
 import com.example.carSaleShop.dto.SalesDto;
-import com.example.carSaleShop.excception.CustomException;
+import com.example.carSaleShop.exception.CustomException;
 import com.example.carSaleShop.mapper.SalesMapper;
-import com.example.carSaleShop.model.Auitable;
-import com.example.carSaleShop.reposatory.CarReposatory;
-import com.example.carSaleShop.reposatory.SalesReposatory;
+import com.example.carSaleShop.model.Auditable;
+import com.example.carSaleShop.model.SaleStatus;
+import com.example.carSaleShop.reposatory.SalesRepository;
 import lombok.Builder;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.mongodb.core.MongoTemplate;
@@ -17,59 +18,116 @@ import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-@Builder
-public class SalesServices extends Auitable {
-    @Autowired
-    SalesReposatory reposatory;
-    @Autowired
-    MongoTemplate template;
-    @Autowired
-    PasswordEncoder encoder;
-    @Autowired
-    SalesMapper mapper;
+@Transactional
+@RequiredArgsConstructor
+public class SalesServices {
 
-    public String save(SalesDto dto) {
-        Query query =new Query();
-        query.addCriteria(Criteria.where("_id").is(dto.getId()));
-        if (template.exists(query, Sales.class))
-            throw new CustomException("this  order is done", HttpStatus.CREATED);
-        return template.save(mapper.toEntityy(dto).getId());
-    }
+    private final SalesRepository repository;
+    private final MongoTemplate template;
+    private final SalesMapper mapper;
 
 
-    public void delete(String id) {
-        Query query =new Query();
-        query.addCriteria(Criteria.where("_id").is(id));
-        if (!template.exists(query,Sales.class))
-            throw new CustomException("this order not  done",HttpStatus.NOT_FOUND);
-        template.remove(query,Sales.class);
-    }
-
-    public PageResult search(LocalDateTime dateTime, String carId, Pageable pageable) {
+    public String create (SalesDto dto) {
         Query query = new Query();
-        if (dateTime != null){
-            LocalDateTime from = LocalDateTime.of(LocalDate.from(dateTime), LocalTime.MAX);
-            LocalDateTime to = LocalDateTime.of(LocalDate.from(dateTime), LocalTime.MIN);
-            query.addCriteria(Criteria.where("dateTime").is("1"));
+        query.addCriteria(Criteria.where("carId").is(dto.getCarId())
+                .and("status").in(SaleStatus.PENDING, SaleStatus.COMPLETED));
+
+        if (template.exists(query, Sales.class)) {
+            throw new CustomException("A sale for this car is already exists", HttpStatus.CONFLICT);
         }
+
+        Sales sales = mapper.toEntity(dto);
+        sales.setStatus(SaleStatus.PENDING);
+        sales = repository.save(sales);
+
+        return mapper.toDto(sales).getId();
+    }
+
+    public SalesDto complete (String id){
+        Sales sale = findOrThrow(id);
+
+        if (sale.getStatus() == SaleStatus.COMPLETED){
+            throw new CustomException("Sale is already completed", HttpStatus.BAD_REQUEST);
+        }
+
+        if (sale.getStatus() == SaleStatus.CANCELLED){
+            throw new CustomException("Sale is cancelled", HttpStatus.BAD_REQUEST);
+        }
+
+        sale.setStatus(SaleStatus.COMPLETED);
+        sale = repository.save(sale);
+
+        return mapper.toDto(sale);
+    }
+
+    public SalesDto update(SalesDto dto, String id){
+        Sales sales = findOrThrow(id);
+
+        if (sales.getStatus() == SaleStatus.COMPLETED){
+            throw new CustomException("Sale is already completed", HttpStatus.BAD_REQUEST);
+        }
+
+        if (sales.getStatus() == SaleStatus.CANCELLED){
+            throw new CustomException("Sale is cancelled", HttpStatus.BAD_REQUEST);
+        }
+
+        sales = repository.save(mapper.updateToEntity(dto, sales));
+        return mapper.toDto(sales);
+    }
+
+    public void delete(String id){
+        findOrThrow(id);
+        repository.deleteById(id);
+    }
+
+    public SalesDto getById(String id){
+        Sales sales = findOrThrow(id);
+        return mapper.toDto(sales);
+    }
+
+    public PageResult search(LocalDateTime date,
+                             String carId,
+                             String customerId,
+                             SaleStatus status,
+                             Pageable pageable) {
+
+        Query query = new Query();
+
+        if (date != null){
+            query.addCriteria(Criteria.where("date")
+                    .gte(date.toLocalDate().atStartOfDay())
+                    .lte(date.toLocalDate().atTime(23, 59, 59)));
+        }
+
         if (carId != null)
             query.addCriteria(Criteria.where("carId").is(carId));
-        List<SalesDto> dtos = template.find(query.with(pageable),Sales.class).stream().map(sales->{
-            return mapper.toDto(sales);
-        }).collect(Collectors.toList());
-        Long count = template.count(query ,Sales.class);
-        List<SalesDto> dtoList = template.find(query ,Sales.class).stream().map(sales -> {
-            return mapper.toDto(sales);
-        }).collect(Collectors.toList());
-        return PageResult.builder().item(dtoList).count(count).build();
+
+        if (customerId != null)
+            query.addCriteria(Criteria.where("customerId").in(customerId));
+
+        if (status != null)
+            query.addCriteria(Criteria.where("status").is(status));
+
+        long count = template.count(query, Sales.class);
+        List<SalesDto> items = template.find(query.with(pageable),Sales.class)
+                .stream()
+                .map(mapper::toDto)
+                .toList();
+
+        return PageResult.builder().item(items).count(count).build();
+    }
+
+
+    public Sales findOrThrow(String id){
+        return repository.findById(id).orElseThrow(() -> new CustomException("Sale not found", HttpStatus.NOT_FOUND));
     }
 }
